# BotDiscordScrimOW

./: Dockerfile  build_teams.py  discord_scrim.py  main.py  pyproject.toml  scrim.py
