[tool.poetry]
name = "botdiscordscrimow"
version = "0.1.0"
description = ""
authors = ["SnowShinoTech"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
"discord.py" = "^2.3.2"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
